--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       padding: 0;
       text-align: center;
       overflow-x: hidden;
+      position: relative;
+      min-height: 100vh;
     }
 
     h1 {
@@ -129,6 +131,16 @@
       color: #fff;
     }
 
+    footer {
+      background-color: #333;
+      color: #fff;
+      padding: 10px 0;
+      position: absolute;
+      bottom: 0;
+      width: 100%;
+      text-align: center;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
@@ -201,6 +213,11 @@
       <button onclick="goBack()">Go Back</button>
     </div>
   </div>
+
+  <!-- Copyright Footer -->
+  <footer>
+    <p>&copy; Copyright for all this effort is reserved to you Prakritii (only).</p>
+  </footer>
 
   <script>
     // JavaScript for Interactive Car and Views
