--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello Miss Arora !!!! Missing you a lot </title>
+  <title>Hello Miss Arora !!!!</title>
   <style>
     /* Existing styles */
     body {
@@ -160,7 +160,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello Miss Arora !!!!</h1>
+    <h1>Hello Miss Arora !!!!  Missing you bahot zyada</h1>
 
     <!-- Pathway with Stops -->
     <div class="pathway">
