--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello Miss Arora !!!!  Missing you bahot zyada</h1>
+    <h1>Hello Miss Arora !!!!</h1>
 
     <!-- Pathway with Stops -->
     <div class="pathway">
@@ -192,7 +192,7 @@
 
     <div id="memories" class="view">
      <h2>Details</h2>
-      <p>ye detail aapke liye nahi mere liye hai. waise ab mjhe sab yad hai Ms Nonu
+      <p>Ye detail aapke liye nahi mere liye hai. waise ab mjhe sab yad hai Ms Nonu
       Name - Nonu</br>
       Hobby - Gussa krna</br>
       Best thing - Heart</br>
@@ -242,7 +242,7 @@
 
   <!-- Copyright Footer -->
    <footer>
-    <p><span class="icon">❤️</span>&copy; Copyright for all this effort is reserved to you Prakritii (only)..</p>
+    <p><span class="icon">❤️</span>&copy; Copyright for all these efforts are reserved to you Prakritii (only)..</p>
   </footer>
 
   <script>
