--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <div class="stop" style="left: 40%;" onclick="showView('favoriteThings')">Little things</div>
       <div class="stop" style="left: 70%;" onclick="showView('memories')">Details</div>
       <div class="stop" style="left: 100%;" onclick="showView('FromHeart')">From heart</div>
-      <div class="stop" style="left: 130%;" onclick="showSpecialFiles()">Special Files</div> <!-- New stop
+      <div class="stop" style="left: 130%;" onclick="showSpecialFiles()">Special Files</div> 
       <div class="car">🚗</div>
     </div>
 
